--- a/views/admin/coupon.ejs
+++ b/views/admin/coupon.ejs
@@ -9,6 +9,8 @@
         <div class=" mt-100 mb-5 d-flex align-items-center justify-content-center">
           <h3 class="text-decoration-underline">Coupon management</h3>
         </div>
+        <div class="row">
+            
         <div class="container mb-5 border border-secondary">
           <div class=" d-flex align-items-center justify-content-center">
             <h5 class="text-decoration-underline">Add coupon</h5>
@@ -45,7 +47,7 @@
           </form>
 
         </div>
-
+    </div>
         <table class="table table-success table-striped" id="table">
           <thead>
             <tr>
