--- a/views/partials/adminHeader.ejs
+++ b/views/partials/adminHeader.ejs
@@ -20,7 +20,7 @@
           </a>
           <ul class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start" id="menu">
             <li class="nav-item">
-              <a href="/admin/dashbord" class="nav-link align-middle px-0">
+              <a href="/admin/dashboard" class="nav-link align-middle px-0">
                 <img src="/adminimages/pic1.jpg" alt="" style="width: 1rem" /><span
                   class="ms-1 d-none d-sm-inline">Dashboard</span>
               </a>
@@ -59,6 +59,10 @@
                 <span class="ms-1 d-none d-sm-inline">Users</span>
               </a>
             </li>
+            <a href="/admin/getBanner" class="nav-link px-0 align-middle">
+              <img src="/adminimages/pic2.jpg" alt="" style="width: 1rem" />
+              <span class="ms-1 d-none d-sm-inline">Add Banner</span>
+            </a>
             <li>
               <a href="/admin/adminLogout" class="nav-link px-0 align-middle">
                 <img src="/adminimages/pic6.jpg" alt="" style="width: 1rem" />
