--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -1,22 +1,42 @@
 
 <%-include("../partials/header.ejs")%>
-    <div class="site-blocks-cover" style="background-image: url(images/imageNew2.png);" data-aos="fade">
+<div id="myCarousel" class="carousel slide mt-2 mb-5"  data-bs-ride="carousel">
+  <div class="carousel-indicators ">
+    <button  type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active border-0" aria-current="true" aria-label="Slide 1"></button>
+    <button  type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2" class="border-0"></button>
+  </div>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <svg class="bd-placeholder-img" width="100%" style="height: 600px;" height="100%" xmlns="http://www.w3.org/2000/svg"  preserveAspectRatio="xMidYMid slice" focusable="false"><image class="img-fluid img-thumbnail position-absolute" href="adminImages/Home3.jpg" /></svg>
       <div class="container">
-        <div class="row align-items-start align-items-md-center justify-content-end">
-          <div class="col-md-5 text-center text-md-left pt-5 pt-md-0">
-            <h1 class="mb-2">Finding Your Perfect Shoes</h1>
-            <div class="intro-text text-center text-md-left">
-              <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus at iaculis quam. Integer accumsan tincidunt fringilla. </p>
-              <p>
-                <a href="#" class="btn btn-sm btn-primary">Shop Now</a>
-              </p>
-            </div>
-          </div>
+        <div class="carousel-caption text-start ">
+          <h1 class="text-danger">shop Now and Get Rewards</h1>
+          <p class="text-danger">Some representative placeholder content for the first slide of the carousel.</p>
+          <p><a class="btn btn-lg btn-outline-danger" href="/shop">Shop</a></p>
         </div>
       </div>
     </div>
-
-    <div class="site-section site-section-sm site-blocks-1">
+    <div class="carousel-item">
+      <svg class="bd-placeholder-img" width="100%" style="height: 600px;" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><image  class="img-fluid img-thumbnail position-absolute" href="adminImages/Home1.jpg"  /></svg>
+      <div class="container">
+        <div class="carousel-caption text-end">
+          <h1 class="text-warning">Go To Wishlist & Grab Your Orders before Offer Ends</h1>
+          <p class="text-warning">Some Amazing products are waiting for you! order Now and Awail Offers </p>
+          <p><a class="btn btn-lg btn-outline-warning" href="/viewWishlist">Wishlist</a></p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <button  class="carousel-control-prev bg-transparent border-0"  type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <!-- <span class="visually-hidden">Previous</span> -->
+  </button>
+  <button  class="carousel-control-next bg-transparent border-0" type="button"  data-bs-target="#myCarousel" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <!-- <span class="visually-hidden">Next</span> -->
+  </button>
+</div>
+    <div class="site-section site-section-sm site-blocks-1 ">
       <div class="container">
         <div class="row">
           <div class="col-md-6 col-lg-4 d-lg-flex mb-4 mb-lg-0 pl-4" data-aos="fade-up" data-aos-delay="">
@@ -49,14 +69,13 @@
         </div>
       </div>
     </div>
-
     <div class="site-section site-blocks-2">
       <div class="container">
         <div class="row">
           <div class="col-sm-6 col-md-6 col-lg-4 mb-4 mb-lg-0" data-aos="fade" data-aos-delay="">
             <a class="block-2-item" href="/shop">
               <figure class="image">
-                <img src="images/women.jpg" alt="" class="img-fluid">
+                <img src="adminImages/womenCategory.jpg" alt="" class="img-fluid">
               </figure>
               <div class="text">
                 <span class="text-uppercase">Collections</span>
@@ -67,7 +86,7 @@
           <div class="col-sm-6 col-md-6 col-lg-4 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="100">
             <a class="block-2-item" href="/shop">
               <figure class="image">
-                <img src="images/children.jpg" alt="/shop" class="img-fluid">
+                <img src="adminImages/categoryKids.jpg" alt="/shop" class="img-fluid">
               </figure>
               <div class="text">
                 <span class="text-uppercase">Collections</span>
@@ -78,7 +97,7 @@
           <div class="col-sm-6 col-md-6 col-lg-4 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="200">
             <a class="block-2-item" href="/">
               <figure class="image">
-                <img src="images/men.jpg" alt="" class="img-fluid">
+                <img src="adminImages/categoryMen2.jpg" alt="" class="img-fluid">
               </figure>
               <div class="text">
                 <span class="text-uppercase">Collections</span>
@@ -89,7 +108,6 @@
         </div>
       </div>
     </div>
-
     <div class="site-section block-3 site-blocks-2 bg-light">
       <div class="container">
         <div class="row justify-content-center">
@@ -119,12 +137,12 @@
         </div>
       </div>
     </div>
-
     <div class="site-section block-8">
       <div class="container">
-        <div class="row justify-content-center  mb-5">
-          <div class="col-md-7 site-section-heading text-center pt-4">
-            <h2>Big Sale!</h2>
+        <% bannerData.forEach(element=> { %>
+        <div class="row justify-content-center  mb-5">       
+          <div class="col-md-7 site-section-heading text-center pt-4">            
+            <h2><%=element.offerType %> </h2>
           </div>
         </div>
         <div class="row align-items-center">
@@ -132,12 +150,13 @@
             <a href="#"><img src="images/blog_1.jpg" alt="Image placeholder" class="img-fluid rounded"></a>
           </div>
           <div class="col-md-12 col-lg-5 text-center pl-md-5">
-            <h2><a href="#">50% less in all items</a></h2>
-            <p class="post-meta mb-4">By <a href="#">Carl Smith</a> <span class="block-8-sep">&bullet;</span> September 3, 2018</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam iste dolor accusantium facere corporis ipsum animi deleniti fugiat. Ex, veniam?</p>
+            <h2><a href="#">Use Code <%=element.couponName %></a></h2>
+            <p class="post-meta mb-4">offer <a href="#">valid till</a> <span class="block-8-sep">&bullet;</span> february 3, 2022</p>
+            <p><%=element.bannerText %></p>
             <p><a href="#" class="btn btn-primary btn-sm">Shop Now</a></p>
           </div>
         </div>
+        <% }) %>
       </div>
     </div>
     <%-include("../partials/footer")-%>
