--- a/views/admin/login.ejs
+++ b/views/admin/login.ejs
@@ -18,8 +18,8 @@
                 <div class="row g-0">
                   <div class="col-md-6 col-lg-5 d-none d-md-block">
                     <div class="imgBg">
-                    <img src="/public/images/adminShoes-removebg-preview.png"
-                      alt="login form" class="img-fluid" style="border-radius: 1rem 0 0 1rem;" />
+                    <img src="/adminImages/adidasM2.webp"
+                      alt="login form" class="img-fluid" style="border-radius: 1rem 0 0 1rem; height: 100%;" />
                     </div>
                   </div>
                   <div class="col-md-6 col-lg-7 d-flex align-items-center">
