--- a/views/user/otp.ejs
+++ b/views/user/otp.ejs
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha1/dist/js/bootstrap.bundle.min.js" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/otpstyle.css">
-    <title>Document</title>
+    <title>otp verification</title>
 </head>
 <body>
     <div  class="container mt-5">
@@ -19,8 +19,14 @@
                 <h5 class="m-0 text-success">Email verification</h5>
             </div>
             
-            <h6 class="mobile-text mt-3">Enter the otp received in yout email</h6>
+            <h6 class="mobile-text mt-3">Enter the otp received in your email</h6>
             <div class="d-flex flex-row mt-4">
+                <%if(locals.userData){%>
+                <input type="hidden" name="name" id="name" class="form-control" value="<%=userData.name%>"/>
+                <input type="hidden" name="email" id="email" class="form-control" value="<%=userData.email%>"/>
+                <input type="hidden" name="phone" id="phone" class="form-control" value="<%=userData.phone%>"/>
+                <input type="hidden" name="password" id="password" class="form-control" value="<%=userData.password%>"/>
+                <%}%>
                 <input type="password" name="otp" id="otp" class="form-control" />
             </div>
             <%if(locals.invalid){%>
@@ -30,7 +36,7 @@
                 <button type="submit" value="Submit" class="btn btn-success btn-lg mt-3">Submit</button>
               </div>
             
-            <div class="text-center mt-0"><span class="d-block mobile-text">Thank you for joining our family</span><span class="font-weight-bold text-danger cursor">WonderShoes</span></div>
+            <div class="text-center mt-0"><span class="d-block mobile-text">Thank you for joining WonderShoes</span><span class="font-weight-bold text-danger cursor">WonderShoes</span></div>
         </div>
         </form>
     </div>
