--- a/views/partials/adminHeaderNew.ejs
+++ b/views/partials/adminHeaderNew.ejs
@@ -123,12 +123,17 @@
                 </li>
             </ul>
           </ul>
-          <form class="d-flex" role="search">
-            <input class="form-control me-2 bg-transparent text-light" style="color:white;"  type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-light " type="submit"><i class="fa fa-search" ></i> </button>
-            <!-- <i class="fa fa-search" ></i> -->
-          </form>
+          <div class="dropdown ">
+            <button class="btn btn-outline-danger dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <i class="fa fa-user" aria-hidden="true"></i>
+            </button>
+            <div class="dropdown-menu " aria-labelledby="dropdownMenuButton">
+              <a class="dropdown-item" href="#">Action</a>
+            </div>
+          </div>
         </div>
       </div>
     </nav>
-  </header>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+</header>
