--- a/views/partials/adminHeader.ejs
+++ b/views/partials/adminHeader.ejs
@@ -59,10 +59,18 @@
                 <span class="ms-1 d-none d-sm-inline">Users</span>
               </a>
             </li>
+            <li>
             <a href="/admin/getBanner" class="nav-link px-0 align-middle">
               <img src="/adminimages/pic2.jpg" alt="" style="width: 1rem" />
               <span class="ms-1 d-none d-sm-inline">Add Banner</span>
             </a>
+          </li>
+          <li>
+            <a href="/admin/salesReport" class="nav-link px-0 align-middle">
+              <img src="/adminimages/pic2.jpg" alt="" style="width: 1rem" />
+              <span class="ms-1 d-none d-sm-inline">sales Report</span>
+            </a>
+          </li>
             <li>
               <a href="/admin/adminLogout" class="nav-link px-0 align-middle">
                 <img src="/adminimages/pic6.jpg" alt="" style="width: 1rem" />
