--- a/views/user/orderDetails.ejs
+++ b/views/user/orderDetails.ejs
@@ -108,7 +108,7 @@
           <div class="col-lg-8 offset-lg-2 text-center">
             <div class="breadcrumb-text">
 
-              <h2>order details</h3><hr>
+              <h2 class="text-dark">order details</h3><hr>
             </div>
           </div>
         </div>
