--- a/views/partials/adminHeaderNew.ejs
+++ b/views/partials/adminHeaderNew.ejs
@@ -119,6 +119,9 @@
                   <a class="nav-link text-light" href="/admin/getBanner" >add Banner</a>
                 </li>
                 <li class="nav-item">
+                  <a class="nav-link text-light" href="/admin/salesReport" >sales Report</a>
+                </li>
+                <li class="nav-item">
                   <a class="nav-link text-light" href="/admin/adminLogout" >Logout</a>
                 </li>
             </ul>
