--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -43,8 +43,8 @@
             <h3 class="footer-heading mb-4">Contact Info</h3>
             <ul class="list-unstyled">
               <li class="address">Wonder shoes,Calicut,India</li>
-              <li class="phone"><a href="tel://23923929210" style="text-decoration:none;">+91 9074145369</a></li>
-              <li class="email">wonderstories8935@gmail.com</li>
+              <li class="phone"><a href="tel:9074145369" style="text-decoration:none;">+91 9074145369</a></li>
+              <li class="email"><a href="/contact"> wonderstories8935@gmail.com</a></li>
             </ul>
           </div>
 
