--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -22,7 +22,7 @@
                 <div class="col-6 col-md-4 order-3 order-md-3 text-right">
                   <div class="site-top-icons">
                     <ul>
-                      
+                      <li><a href="/shop"><span class="icon  icon-briefcase"></li>
                       <li><a href="/viewProfile"><span class="icon icon-person"></li>
                       <li>
                         <a href="/viewWishlist" class="site-cart">
@@ -64,7 +64,7 @@
                 </li>
                 <li><a href="/shop">Shop</a></li>
                 <li><a href="/orderDetails">My Orders</a></li>
-                <li><a href="/contact">Contact Us</a></li>
+                
                <% if(customer){%>
                 <li><a href="/logout">Logout</a></li>
                <%}else{%>
