--- a/views/user/cart.ejs
+++ b/views/user/cart.ejs
@@ -36,7 +36,7 @@
                       <h2 class="h5 text-black"><%= product.productDetail.name %></h2>
                     </td>                    
                     <td><%= product.productDetail.price%> ₹</td>
-                    <td><%= size%> </td>
+                    <td><%= product.productSize%> </td>
                     <td  class="product-quantity">
                       <div class="input-group  " style="max-width: 120px; ">
                         
