--- a/views/admin/addProduct.ejs
+++ b/views/admin/addProduct.ejs
@@ -2,10 +2,14 @@
 
       <div class="col py-3">
 
-        <div class="container mt-5 w-50 border ">
+        <div class="container mt-5 w-50 border p-5">
           <form action="/admin/postProduct" method="post" id="form" enctype="multipart/form-data">
             <div class="d-flex justify-content-center">
               <h1>Add Product</h1>
+            </div>
+            <div class="form-outline flex-fill mb-0 mt-4">
+              <input class="form-control" required  placeholder="Product image" type="file" name="product_image"
+                id="product_image">
             </div>
             <div class="form-outline flex-fill mb-0 mt-4">
               <input type="text" required placeholder="Product name" name="product_name" id="product_name"
@@ -15,33 +19,36 @@
               <input type="text" required placeholder="Price" name="price" id="price" class="form-control" required>
             </div>
             <div class="form-outline flex-fill mb-0 mt-4">
-              
-              <select required  class="form-select required" name="category" id="category"   aria-label="Default select example">
-                <option selected value="" disabled="disabled" >Category</option>
-                <% category.forEach((categories)=> {%>
-                <option value="<%=categories._id%>" ><%=categories.category_name%></option>
-                <% }) %>
-                
-              </select>
-            </div>
-            <div class="form-outline flex-fill mb-0 mt-4">
               <input type="text" required  placeholder="Description" name="description" id="description" class="form-control" />
             </div>
             <div class="form-outline flex-fill mb-0 mt-4">
               <input type="text" required  placeholder="Stock" name="stock" id="stock" class="form-control" />
             </div>
             <div class="form-outline flex-fill mb-0 mt-4">
-              <input class="form-control" required  placeholder="Product image" type="file" name="product_image"
-                id="product_image">
+              <input  class="form-control" type="text" placeholder="Size" id="size" name="size" />
+            </div>           
+            <div class="form-outline flex-fill mb-0 mt-4">              
+              <select required  class="form-select required" name="category" id="category"   aria-label="Default select example">
+                <option selected value="" disabled="disabled" >Category</option>
+                <% category.forEach((categories)=> {%>
+                <option value="<%=categories._id%>" ><%=categories.category_name%></option>
+                <% }) %>              
+              </select>
             </div>
-            <div class="d-flex justify-content-center mt-4 ">
-              <button type="submit" class="btn btn-success btn-block mb-4">Add product</button>
+            <div class="row p-2 mt-5 mb-2">
+              <div class="col-md-12 d-flex justify-content-center">
+                <button class="btn btn-success sub-btn btn-lg">Add Product</button>
+              </div>
             </div>
-
           </form>
         </div>
-
       </div>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
       crossorigin="anonymous"></script>
+      <script src="/javascript/productAdd.js"></script>
+      <script>
+          $("#menu-btn").click(function () {
+            $("#menu").toggleClass("active");
+          });
+        </script>
