--- a/views/admin/category.ejs
+++ b/views/admin/category.ejs
@@ -1,6 +1,6 @@
 <%- include ("../partials/adminHeader") %> 
 <!-- end admin sidebar -->
-      <div class="col py-3">
+      <div style="padding:5rem;margin-top: 5rem;" class="col py-3">
         <div class="d-flex align-items-center justify-content-center">
           <h1 class="text-decoration-underline">Categories</h1>
         </div>
@@ -111,3 +111,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
     crossorigin="anonymous"></script>
+    <script>
+      $("#menu-btn").click(function () {
+        $("#menu").toggleClass("active");
+      });
+    </script>
