--- a/views/admin/editProduct.ejs
+++ b/views/admin/editProduct.ejs
@@ -16,13 +16,14 @@
             <div class="form-outline flex-fill mb-0 mt-3">
               <label class="form-label" for="form3Example1c">Price per kg</label>
               <input type="text" value="<%=productData.price%>" name="price" id="price" class="form-control" />
-
             </div>
-            <div class="form-outline flex-fill mb-0 mt-3">
-              <label class="form-label" for="form3Example1c">Category</label>
-              <input type="text" value="<%=productData.category%>" name="category" id="category"
-                class="form-control" />
-
+            <div class="form-outline flex-fill mb-0 mt-4">              
+              <select required  class="form-select required" name="category" id="category"   aria-label="Default select example">
+                <option selected value="<%=productData.category%>" disabled="disabled" >Category</option>
+                <% category.forEach((categories)=> {%>
+                <option value="<%=categories._id%>" ><%=categories.category_name%></option>
+                <% }) %>              
+              </select>
             </div>
             <div class="form-outline flex-fill mb-0 mt-3">
               <label class="form-label" for="form3Example1c">Description</label>
@@ -59,7 +60,11 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
     crossorigin="anonymous"></script>
-
+    <script>
+      $("#menu-btn").click(function () {
+        $("#menu").toggleClass("active");
+      });
+    </script>
 </body>
 
 </html>
