--- a/views/admin/orderedProduct.ejs
+++ b/views/admin/orderedProduct.ejs
@@ -3,14 +3,14 @@
 <%- include('../partials/adminHeader')%>
     <!-- end admin sidebar -->
 
-    <div class="col py-3">
+    <div style="margin-top: 5rem;" class="col py-3 ">
 
         <div class="container">
             <div class="mb-100 mt-100">
 
-                <div class="d-flex justify-content-center">
+                <div class="d-flex justify-content-left mb-3">
                     <div class="bg-light" style="height: 170px;width: 400px;">
-                        <div class=" d-flex justify-content-center">
+                        <div class=" d-flex justify-content-left">
                             <h6 class="text-decoration-underline">Delivery address for this order</h6>
                         </div>
                         <% let phone='Ph:' %> 
@@ -27,8 +27,9 @@
                             <th scope="col">Image</th>
                             <th scope="col">Product name</th>
                             <th scope="col">Category</th>
-                            <th scope="col">Ordered quantity</th>
-                            <th scope="col">Price/kg</th>
+                            <th scope="col">Size</th>
+                            <th scope="col">quantity</th>
+                            <th scope="col">Price</th>
                             <th scope="col">Total</th>
 
                         </tr>
@@ -38,14 +39,15 @@
                         <% productData.forEach((order)=>{ %>
                             <tr>
                               <td><img style="height: 60px; width: 60px;" src="/adminimages/<%= order.productDetail._id %>.jpg" class="img-fluid" alt="" /></td>
-                              <td><%= order.productDetail.product_name %></td>
+                              <td><%= order.productDetail.name %></td>
                               <td><%= order.category_name.category_name%></td>
-                              <td><%= order.productQuantity %> kg</td>
+                              <td><%= order.productSize %></td>
+                              <td><%= order.productQuantity %></td>
                               <% var a=order.productQuantity%>
                               <% var b=order.productDetail.price%>
                               <% var c=a*b %>
-                              <td><%=order.productDetail.price%> ₹</td>
-                              <td><%=c %> ₹ ( for <%= order.productQuantity%> kg )</td>
+                              <td>₹ <%=order.productDetail.price%> </td>
+                              <td>₹ <%=c %></td>
                               
                             </tr>
                             <% }) %> 
