--- a/views/admin/orders.ejs
+++ b/views/admin/orders.ejs
@@ -1,18 +1,17 @@
 <%- include ("../partials/adminHeader") %> 
     <!-- end admin sidebar -->
 
-    <div class="col py-3">
+    <div style="margin-top: 5rem;" class="col py-3">
 
         <section>
             <div class="container">
                 <div class=" mt-100 mb-5 d-flex align-items-center justify-content-center">
-                    <h3 class="text-decoration-underline">Order details</h3>
+                    <h3 class="text-decoration-underline">Order Details</h3>
                 </div>
                 <table class="table table-success table-striped mb-100" id="table">
                     <thead>
                         <tr>
                             <th scope="col">Customer name</th>
-                            
                             <th scope="col">Order date</th>
                             <th scope="col">Payment method</th>
                             <th scope="col">Payment status</th>
@@ -20,8 +19,6 @@
                             <th scope="col">Delivery  date</th>
                             <th scope="col">Total amount</th>
                             <th scope="col">Order controlls</th>
-
-
                         </tr>
                     </thead>
                     <tbody>
