--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -39,7 +39,7 @@
                       <button class="btn btn-primary btn-lg btn-block" type="submit">Login</button>
                     </div>
   
-                    <a class="small text-muted" href="#!">Forgot password?</a>
+                    <a class="small text-muted" href="/forgotPassword">Forgot password?</a>
                     <p class="mb-5 pb-lg-2" style="color: #393f81;">Don't have an account? <a href="/signup"
                         style="color: #393f81;">SignUp</a></p>
                     <a href="#!" class="small text-muted">Terms of use.</a>
