--- a/views/user/orderDetails.ejs
+++ b/views/user/orderDetails.ejs
@@ -13,16 +13,8 @@
   <link rel="stylesheet" href="/css/style.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <style>
-      body{
-        font-family: "Mukta", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-        color: rgb(64, 106, 92);
-      }
-     </style>
 </head>
-
 <body>
- 
 
   <div class="site-wrap">
     <header class="site-navbar" role="banner">
@@ -88,7 +80,7 @@
               <a href="/about" style="text-decoration: none;">About</a>
             </li>
             <li><a href="/shop" style="text-decoration: none;">Shop</a></li>
-            <li><a href="#" style="text-decoration: none;">My Orders</a></li>
+            <li><a href="" style="text-decoration: none;">My Orders</a></li>
             <li><a href="/contact" style="text-decoration: none;">Contact Us</a></li>
             <% if(customer){%>
               <li><a href="/logout" style="text-decoration: none;">Logout</a></li>
@@ -117,7 +109,7 @@
     <!-- end breadcrumb section -->
    <% if (orderDetails) { %>
     <!-- middle section -->
-    <div class="container  mb-5">
+    <div class="container  mb-5 p-5">
       <table class="table table-success table-striped mb-100" id="table">
         <thead>
           <tr>
