--- a/views/user/orderedProduct.ejs
+++ b/views/user/orderedProduct.ejs
@@ -1,58 +1,5 @@
 <%- include('../partials/header')%>
 
-
-  <!-- end breadcrumb section -->
-
-
-  <!-- Middle section -->
-  <div class="container">
-    <div class="mb-100 mt-100">
-
-      <table class="table  table-striped">
-        <thead>
-          <tr>
-            <th scope="col">Image</th>
-            <th scope="col">Product name</th>
-            <th scope="col">Order Date</th>
-            <th scope="col">Ordered quantity</th>
-            <th scope="col">Price/kg</th>
-            <th scope="col">Total</th>
-
-          </tr>
-        </thead>
-        <tbody>
-          <% productData.forEach((order)=>{ %>
-            <tr>
-              <td><a href="/productview/<%= order.productDetail._id %>"><img style="height: 60px; width: 60px;" src="/adminimages/<%= order.productDetail._id %>.jpg"
-                  class="img-fluid" alt="" /></a></td>
-              <td>
-                <%= order.productDetail.name %>
-              </td>
-              <td>
-                <%= orderDetails[0].orderDate%>
-              </td>
-              <td>
-                <%= order.productQuantity %>
-              </td>
-              <% var a=order.productQuantity%>
-                <% var b=order.productDetail.price%>
-                  <% var c=a*b %>
-                    <td>
-                      <%=order.productDetail.price%> ₹
-                    </td>
-                    <td>
-                      <%=c %> ₹
-                    </td>
-            </tr>
-            <% }) %>
-
-        </tbody>
-      </table>
-
-    </div>
-  </div>
-
-  <% include ('../partials/header') %>  
 <style>
     @media (min-width: 1025px) {
 
@@ -86,11 +33,17 @@ padding-top: 15px;
     <div class="container py-5 h-100">
       <div class="row d-flex justify-content-center align-items-center h-100">
         <div class="col-lg-8 col-xl-6">
-          <div class="card border-top border-bottom border-3" style="border-color: #94acdd !important;">
+          <div class="card border-top border-bottom border-3" style="border-color: #f37a27 !important;">
             <div class="card-body p-5">
-  
-              <p class="lead fw-bold mb-5" style="color: #f37a27;">Order Details</p>
-  
+              <% productData.forEach((order)=>{ %>
+              <p class="lead fw-bold " style="color: #f37a27;">Order Details</p>
+              <a href="/productview/<%= order.productDetail._id %>"><img style="height: 100px; width: 100px;" src="/adminimages/<%= order.productDetail._id %>.jpg"
+                class="img-fluid mb-3" alt="" /></a>
+                <div class="d-flex">
+                  <h6><%= order.productDetail.name %></h6>
+                  
+                  <h6 class="ml-5">Size :<%= orderDetails[0].orderItems.size%></h6>
+                </div>
               <div class="row">
                 <div class="col mb-3">
                   <p class="small text-muted mb-1">Delivery Date</p>
@@ -98,7 +51,7 @@ padding-top: 15px;
                 </div>
                 <div class="col mb-3">
                   <p class="small text-muted mb-1">Order No.</p>
-                  <p>012j1gvs356c</p>
+                  <p><%= order.productDetail._id %></p>
                 </div>
               </div>
               <div>
@@ -108,14 +61,14 @@ padding-top: 15px;
               <div class="ms-3">
                   <p><%=productData[0].name %>,<br><%=productData[0].address %>,<br><%=phone %> <%=orderDetails[0].phoneNumber%></p>
               </div>
-              <% productData.forEach((order)=>{ %>
+              
               <div class="mx-n5 px-5 py-4" style="background-color: #f2f2f2;">
                 <div class="row">
                   <div class="col-md-8 col-lg-9">
                     <p><%= order.productDetail.name %> </p>
                   </div>
                   <div class="col-md-4 col-lg-3">
-                    <p><%= order.productDetail.price %>₹ *<%= order.productQuantity %> </p>
+                    <p><%= order.productDetail.price %> X <%= order.productQuantity %> </p>
                   </div>
                 </div>
                 <div class="row">
