--- a/views/user/productView.ejs
+++ b/views/user/productView.ejs
@@ -29,48 +29,28 @@
               <%=product.price%>₹
             </strong></p>
           <b>Select Size</b>
-          <form action="/cart/<%=product._id%>" method="post" >
+          <form action="/cart/<%=product._id%>" method="post">
             <div class="mb-4 d-flex ">
-              <div class="custom-control custom-radio">
-                <input id="size6" name="size" type="radio" value="6"
-                  class="custom-control-input" checked required />
-                <label class="custom-control-label mr-2" for="size6">6</label>
-              </div>
 
-              <div class="custom-control custom-radio">
-                <input id="size7" name="size" type="radio" value="7"
-                  class="custom-control-input" required />
-                <label class="custom-control-label mr-2" for="size7">7</label>
-              </div>
-            
-                <div class="custom-control custom-radio">
-                  <input id="size8" name="size" type="radio" value="8"
-                    class="custom-control-input" checked required />
-                  <label class="custom-control-label mr-2" for="size6">8</label>
-                </div>
-  
-                <div class="custom-control custom-radio">
-                  <input id="size9" name="size" type="radio" value="9"
-                    class="custom-control-input" required />
-                  <label class="custom-control-label mr-2" for="size7">9</label>
-                </div>
-               
-                  <div class="custom-control custom-radio">
-                    <input id="size10" name="size" type="radio" value="10"
-                      class="custom-control-input" checked required />
-                    <label class="custom-control-label mr-2" for="size6">10</label>
-                  </div>
-                 
+              <% product?.size.forEach(s=> { %>
+                <label class="radio p-2">
+                  <span>
+                    <%= s %>
+                  </span> <br>
+                  <input type="radio" name="size" value="<%= s %> " checked />
+
+                </label>
+                <% }) %>
             </div>
             <div class="row">
-            <button type="submit" value="submit"><a class="buy-now btn btn-sm btn-primary ">Add To Cart</a></button>
-            <p><a href="/wishlist/<%=product._id%>" class="icon icon-heart-o btn btn-link ml-2"><sub>+</sub></a></p>
-          </div>
+              <button type="submit" value="submit"><a class="buy-now btn btn-sm btn-primary ">Add To Cart</a></button>
+              <p><a href="/wishlist/<%=product._id%>" class="icon icon-heart-o btn btn-link ml-2"><sub>+</sub></a></p>
+            </div>
           </form>
 
 
 
-         
+
         </div>
       </div>
 
@@ -79,4 +59,4 @@
 
 
 
-  <%-include("../partials/footer")%>  
+  <%-include("../partials/footer")%>
