--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -93,6 +93,7 @@
                 <div class="row">
                   <div class="col-sm-12">
                     <a class="btn btn-info " target="__blank" href="/editProfile">Edit</a>
+                    <a class="btn btn-info " target="__blank" href="/user/changePassword">Change Password</a>
                   </div>
                 </div>
               </div>
@@ -102,24 +103,19 @@
               <div class="col-sm-6 mb-3">
                 <div class="card h-100">
                   <div class="card-body">
-                   <a href="/orderDetails"><h6 class="d-flex align-items-center mb-3"><i class="material-icons text-info mr-2">assignment</i>Project Status</h6>
+                   <a href="/orderDetails"><h6 class="d-flex align-items-center mb-3"><i class="material-icons text-info mr-2">Shopping</i>Purchase Status</h6>
                     <small>Shopping</small></a> 
                     <div class="progress mb-3" style="height: 5px">
-                      <div class="progress-bar bg-primary" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                      <div class="progress-bar bg-primary" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                     <small>Rewards</small>
                     <div class="progress mb-3" style="height: 5px">
-                      <div class="progress-bar bg-primary" role="progressbar" style="width: 72%" aria-valuenow="72" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                    <small>One Page</small>
-                    <div class="progress mb-3" style="height: 5px">
-                      <div class="progress-bar bg-primary" role="progressbar" style="width: 89%" aria-valuenow="89" aria-valuemin="0" aria-valuemax="100"></div>
+                      <div class="progress-bar bg-primary" role="progressbar" style="width: 32%" aria-valuenow="32" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                     <small>Coins</small>
                     <div class="progress mb-3" style="height: 5px">
-                      <div class="progress-bar bg-primary" role="progressbar" style="width: 55%" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                   
+                      <div class="progress-bar bg-primary" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>   
                   </div>
                 </div>
               </div>
