stripe payment added

--- a/views/admin/orderedProduct.ejs
+++ b/views/admin/orderedProduct.ejs
@@ -79,8 +79,13 @@
         $(document).ready(function () {
             $('#table').DataTable();
         });
+        
     </script>
-
+      <script>
+        $("#menu-btn").click(function () {
+          $("#menu").toggleClass("active");
+        });
+      </script>
     <!--end data table -->
 
     </body>
