--- a/views/user/productView.ejs
+++ b/views/user/productView.ejs
@@ -8,7 +8,7 @@
       </div>
     </div>
   </div>
-  for
+
   <div class="site-section">
     <div class="container">
 
@@ -42,7 +42,7 @@
                 </label>
                 <% }) %>
             </div>
-            <div class="row">
+            <div class="row p-2">
               <button type="submit" value="submit"><a class="buy-now btn btn-sm btn-primary ">Add To Cart</a></button>
               <p><a href="/wishlist/<%=product._id%>" class="icon icon-heart-o btn btn-link ml-2"><sub>+</sub></a></p>
             </div>
