--- a/views/user/profileChangePassword.ejs
+++ b/views/user/profileChangePassword.ejs
@@ -8,7 +8,7 @@
         </p>
         <form action="/postChangePassword" method="post">
             <%if(locals.userData){%> 
-                <input type="email" name="email" placeholder="Email" id="email" class="form-control" value="<%=userData.email%>" required/>
+                <input type="password" name="oldPassword" placeholder="Enter  old Password" id="email" class="form-control" value="<%=userData.email%>" required/>
                 <%}%>
             <input name="newPassword" type="text" placeholder="New Password" id="newPassword" class="form-control my-3" required/>
             <% if(locals.error){%>
