--- a/views/admin/banner.ejs
+++ b/views/admin/banner.ejs
@@ -1,7 +1,7 @@
 <%- include ("../partials/adminHeader") %>
 
 
-    <div class="col py-3">
+    <div style="margin-top: 5rem;" class="col py-3">
         <section class="container">
             <div class="d-flex align-items-center justify-content-center">
                 <h3 class="text-decoration-underline">Banner management</h3>
