--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,76 +1,81 @@
 <footer class="site-footer border-top">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-6 mb-5 mb-lg-0">
-          <div class="row">
-            <div class="col-md-12">
-              <h3 class="footer-heading mb-4">Navigations</h3>
-            </div>
-            <div class="col-md-6 col-lg-4" >
-              <ul class="list-unstyled" >
-                <li><a href="#"style="text-decoration:none;">Sell online</a></li>
-                <li><a href="#"style="text-decoration:none;">Features</a></li>
-                <li><a href="#"style="text-decoration:none;">Shopping cart</a></li>
-                <li><a href="#"style="text-decoration:none;">Store builder</a></li>
-              </ul>
-            </div>
-            <div class="col-md-6 col-lg-4">
-              <ul class="list-unstyled">
-                <li><a href="#"style="text-decoration:none;">Mobile commerce</a></li>
-                <li><a href="#"style="text-decoration:none;">Dropshipping</a></li>
-                <li><a href="#"style="text-decoration:none;">Website development</a></li>
-              </ul>
-            </div>
-            <div class="col-md-6 col-lg-4">
-              <ul class="list-unstyled">
-                <li><a href="#"style="text-decoration:none;">Point of sale</a></li>
-                <li><a href="#"style="text-decoration:none;">Hardware</a></li>
-                <li><a href="#"style="text-decoration:none;">Software</a></li>
-              </ul>
-            </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-6 mb-5 mb-lg-0">
+        <div class="row">
+          <div class="col-md-12">
+            <h3 class="footer-heading mb-4">Navigations</h3>
           </div>
-        </div>
-        <div class="col-md-6 col-lg-3 mb-4 mb-lg-0">
-          <h3 class="footer-heading mb-4">Promo</h3>
-          <a href="#" class="block-6">
-            <img style="text-decoration:none;width: 40%;height: 40%;" src="/images/logo.png" alt="Image placeholder" class="img-fluid rounded mb-4">
-            <a class="font-weight-light  mb-0">Finding Your Perfect Shoes</h3>
-            <p>Since &mdash;  2022</p>
-          </a>
-        </div>
-        <div class="col-md-6 col-lg-3">
-          <div class="block-5 mb-5">
-            <h3 class="footer-heading mb-4">Contact Info</h3>
+          <div class="col-md-6 col-lg-4">
             <ul class="list-unstyled">
-              <li class="address">Wonder shoes,Calicut,India</li>
-              <li class="phone"><a href="tel:9074145369" style="text-decoration:none;">+91 9074145369</a></li>
-              <li class="email"><a href="/contact"> wonderstories8935@gmail.com</a></li>
+              <li><a href="#" style="text-decoration:none;">Sell online</a></li>
+              <li><a href="#" style="text-decoration:none;">Features</a></li>
+              <li><a href="#" style="text-decoration:none;">Shopping cart</a></li>
+              <li><a href="#" style="text-decoration:none;">Store builder</a></li>
             </ul>
           </div>
-
-          <div class="block-7">
-            <form action="#" method="post">
-              <label for="email_subscribe" class="footer-heading">Subscribe</label>
-              <div class="form-group">
-                <input type="text" class="form-control py-4" id="email_subscribe" placeholder="Email">
-                <input type="submit" class="btn btn-sm btn-primary" value="Send">
-              </div>
-            </form>
+          <div class="col-md-6 col-lg-4">
+            <ul class="list-unstyled">
+              <li><a href="#" style="text-decoration:none;">Mobile commerce</a></li>
+              <li><a href="#" style="text-decoration:none;">Dropshipping</a></li>
+              <li><a href="#" style="text-decoration:none;">Website development</a></li>
+            </ul>
+          </div>
+          <div class="col-md-6 col-lg-4">
+            <ul class="list-unstyled">
+              <li><a href="#" style="text-decoration:none;">Point of sale</a></li>
+              <li><a href="#" style="text-decoration:none;">Hardware</a></li>
+              <li><a href="#" style="text-decoration:none;">Software</a></li>
+            </ul>
           </div>
         </div>
       </div>
-      <div class="row pt-5 mt-5 text-center">
-        <div class="col-md-12">
-          <p>
-          <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-          Copyright &copy;<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>document.write(new Date().getFullYear());</script> All rights reserved | made <i class="icon-heart" aria-hidden="true"></i> by <a style="text-decoration:none;" href="https://colorlib.com" target="_blank" class="text-primary">@muhammadarshad8935@gmail.com</a>
-          <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-          </p>
-        </div>
-        
+      <div class="col-md-6 col-lg-3 mb-4 mb-lg-0">
+        <h3 class="footer-heading mb-4">Promo</h3>
+        <a href="#" class="block-6">
+          <img style="text-decoration:none;width: 40%;height: 40%;" src="/images/logo.png" alt="Image placeholder"
+            class="img-fluid rounded mb-4">
+          <a class="font-weight-light  mb-0">Finding Your Perfect Shoes</h3>
+            <p>Since &mdash; 2022</p>
+          </a>
       </div>
-      
-  </footer>
+      <div class="col-md-6 col-lg-3">
+        <div class="block-5 mb-5">
+          <h3 class="footer-heading mb-4">Contact Info</h3>
+          <ul class="list-unstyled">
+            <li class="address">Wonder shoes,Calicut,India</li>
+            <li class="phone"><a href="tel:9074145369" style="text-decoration:none;">+91 9074145369</a></li>
+            <li class="email"><a href="/contact"> wonderstories8935@gmail.com</a></li>
+          </ul>
+        </div>
+
+        <div class="block-7">
+          <form action="#" method="post">
+            <label for="email_subscribe" class="footer-heading">Subscribe</label>
+            <div class="form-group">
+              <input type="text" class="form-control py-4" id="email_subscribe" placeholder="Email">
+              <input type="submit" class="btn btn-sm btn-primary" value="Send">
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+    <div class="row pt-5 mt-5 text-center">
+      <div class="col-md-12">
+        <p>
+          <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+          Copyright &copy;
+          <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
+          <script>document.write(new Date().getFullYear());</script> All rights reserved | made <i class="icon-heart"
+            aria-hidden="true"></i> by <a style="text-decoration:none;" href="https://colorlib.com" target="_blank"
+            class="text-primary">@muhammadarshad8935@gmail.com</a>
+          <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+        </p>
+      </div>
+
+    </div>
+
+</footer>
 </div>
 
 <script src="http://localhost:3000/js/jquery-3.3.1.min.js"></script>
@@ -84,49 +89,50 @@
 <script src="js/main.js"></script>
 <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-crossorigin="anonymous"></script>
+  integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 <script>
-$("#placeOrder").submit((e) => {
-  e.preventDefault();
-  $.ajax({
-    url: '/placeOrder',
-    method: 'post',
-    data: $('#placeOrder').serialize(),
-    success: (response) => {
-      if(response.couponDeleted){
-        Swal.fire({
-        title:"coupon no longer exist!",
-        icon:"error",
-        confirmButtonText:"continue",
-      }).then(function(){
-        location.reload();
-      });
-      }else if(response.coupon){
-        Swal.fire({
-								title: "Coupon already used!",
-								icon: "error",
-								confirmButtonText: "continue",
-							}).then(function () {
-								location.reload()
-							});
-						} else if(response.invalid){
-               Swal.fire({
-                title:"Invalid Coupon",
-                icon:"error",
-                confirmButtonText:"continue",
-               }).then(function(){
-                location.reload();
-               });
-            }else if(response.success){
-              location.href = "/orderSuccess"
-            }else{
-              location.href = "/viewCart";
-            }
+  $("#placeOrder").submit((e) => {
+    e.preventDefault();
+    $.ajax({
+      url: '/placeOrder',
+      method: 'post',
+      data: $('#placeOrder').serialize(),
+      success: (response) => {
+        if (response.couponDeleted) {
+          Swal.fire({
+            title: "coupon no longer exist!",
+            icon: "error",
+            confirmButtonText: "continue",
+          }).then(function () {
+            location.reload();
+          });
+        } else if (response.coupon) {
+          Swal.fire({
+            title: "Coupon already used!",
+            icon: "error",
+            confirmButtonText: "continue",
+          }).then(function () {
+            location.reload()
+          });
+        } else if (response.invalid) {
+          Swal.fire({
+            title: "Invalid Coupon",
+            icon: "error",
+            confirmButtonText: "continue",
+          }).then(function () {
+            location.reload();
+          });
+        } else if (response.success) {
+          location.href = "/orderSuccess"
+        } else if (response.url) {
+          window.location = response.url
+        } else {
+          location.href = "/viewCart";
+        }
       }
-  })
-}) 
- </script>
+    })
+  }) 
+</script>
 </body>
-</html>
 
+</html>
