--- a/views/user/orderDetails.ejs
+++ b/views/user/orderDetails.ejs
@@ -13,9 +13,23 @@
   <link rel="stylesheet" href="/css/style.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
+<style>
+  HTML
+CSS
+.gradient-custom {
+/* fallback for old browsers */
+background: #cd9cf2;
 
+/* Chrome 10-25, Safari 5.1-6 */
+background: -webkit-linear-gradient(to top left, rgba(205, 156, 242, 1), rgba(246, 243, 255, 1));
+
+/* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+background: linear-gradient(to top left, rgba(205, 156, 242, 1), rgba(246, 243, 255, 1))
+}
+</style>
   <div class="site-wrap">
     <header class="site-navbar" role="banner">
       <div class="site-navbar-top">
@@ -66,17 +80,16 @@
                 </ul>
               </div>
             </div>
-
           </div>
         </div>
       </div>
       <nav class="site-navigation text-right text-md-center" role="navigation">
         <div class="container">
           <ul class="site-menu js-clone-nav d-none d-md-block">
-            <li class="has-children active">
+            <li >
               <a href="/index" style="text-decoration: none;">Home</a>
             </li>
-            <li class="has-children">
+            <li >
               <a href="/about" style="text-decoration: none;">About</a>
             </li>
             <li><a href="/shop" style="text-decoration: none;">Shop</a></li>
@@ -92,107 +105,123 @@
       </nav>
     </header>
 
+  </div>
+  </div>
+  <% if (productData.length!==0) { %>
 
-    <!-- breadcrumb-section -->
-    <div class="breadcrumb-section breadcrumb-bg mt-4">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-8 offset-lg-2 text-center">
-            <div class="breadcrumb-text">
-
-              <h2 class="text-dark">order details</h3><hr>
+  <section class="h-100 gradient-custom">
+    <div class="container py-5 h-100">
+      <div class="row d-flex justify-content-center align-items-center h-100">
+        <div class="col-lg-10 col-xl-8">
+          <div class="card" style="border-radius: 10px;">
+            <div class="card-header px-4 py-5">
+              <h5 class="text-muted mb-0">Thanks for your Order, <span style="color: #a8729a;"><%=productData[0]?.name%></span>!</h5>
             </div>
+            <div class="card-body p-4">
+              <div class="d-flex justify-content-between align-items-center mb-4">
+                <p class="lead fw-normal mb-0" style="color: #a8729a;">Receipt</p>
+                <p class="small text-muted mb-0">Receipt Voucher : 1KAU9-84UIL</p>
+              </div>
+              <% productData.forEach((product)=>{ %>
+              <div class="card shadow-0 border mb-4">
+                <div class="card-body">
+                  <div class="row">
+                    
+                    <div class="col-md-2">
+                      
+                      <img src="/adminimages/<%= product.productDetail._id %>.jpg"
+                        class="img-fluid" alt="Phone">
+                        <a href="/orderedProduct/<%= product._id %>" style="text-decoration: #a8729a; "  >Track </a>
+                    </div>
+                    <div class="col-md-2 text-center d-flex justify-content-center align-items-center">
+                      <p class="text-muted mb-0"><%=product.productDetail.name%></p>
+                    </div>
+                    <div class="col-md-2 text-center d-flex justify-content-center align-items-center">
+                      <p class="text-muted mb-0 small"><%= product.category_name.category_name %></p>
+                    </div>
+                    <div class="col-md-2 text-center d-flex justify-content-center align-items-center">
+                      <p class="text-muted mb-0 small">size <%=product.productDetail.size[0]%></p>
+                    </div>
+                    <div class="col-md-2 text-center d-flex justify-content-center align-items-center">
+                      <p class="text-muted mb-0 small">payment: <%= product.paymentMethod %></p>
+                    </div>
+                    <div class="col-md-2 text-center d-flex justify-content-center align-items-center">
+                      <p class="text-muted mb-0 small">      
+                        <% if(product.orderStatus=='placed' ||product.orderStatus=='pending' ||product.orderStatus=='Shipped'||product.orderStatus=='outForDelivery' ){ %>
+                        <a data-bs-toggle="modal" class="btn btn-outline-danger"
+                          data-bs-target="#exampleModal-<%=product._id%>">
+                          Cancel
+                      </a>
+      
+                        <% }else{%>
+                           <b>Order Cancelled</b>
+                          <% } %>
+                          <!-- Modal -->
+                          <div class="modal fade  modal-centered" id="exampleModal-<%=product._id%>" tabindex="-1"
+                            aria-labelledby="exampleModalLabel">
+                            <div class="modal-dialog modal-dialog-centered">
+                              <div class="modal-content">
+                                <div class="modal-header">
+                                  <h1 class="modal-title fs-5" id="exampleModalLabel">Delete confirmation</h1>
+                                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                </div>
+                                <div class="modal-body">
+                                  Are you sure you want to cancel this order ?
+                                </div>
+                                <div class="modal-footer">
+                                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                  <a href="/cancelOrder/<%=product._id%>"><button type="button"
+                                      class="btn btn-danger">Cancel</button></a>
+                                </div>
+                              </div>
+                            </div>
+                          </div></p>
+                    </div>
+                    <div class="col-md-2 text-center d-flex justify-content-center align-items-center">
+                      <p class="text-muted mb-0 small"></p>
+                    </div>
+                    
+                  </div>
+                  <hr class="mb-4" style="background-color: #e0e0e0; opacity: 1;">
+                  <div class="row d-flex align-items-center">
+                    <div class="col-md-2">
+                      <p class="text-muted mb-0 small">Total Amount:<%= product.totalAmount%></p>
+                    </div>
+                    <div class="col-md-10">
+                      <!-- <div class="progress" style="height: 6px; border-radius: 16px;">
+                        <div class="progress-bar" role="progressbar"
+                          style="width: 65%; border-radius: 16px; background-color: #a8729a;" aria-valuenow="65"
+                          aria-valuemin="0" aria-valuemax="100"></div>
+                      </div> -->
+                      <div class="d-flex justify-content-right">
+                        
+                        <p class="text-muted mt-1 mb-0 small ms-xl-5">status : <%=product.paymentStatus%></p>
+                        <p class="text-muted mt-1 ml-5 mb-0 small ms-xl-5">Order Date : <%=product.orderDate%></p>
+                      </div>
+                     
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <% }) %>
+            
           </div>
         </div>
       </div>
     </div>
-    <!-- end breadcrumb section -->
-   <% if (orderDetails) { %>
-    <!-- middle section -->
-    <div class="container  mb-5 p-5">
-      <table class="table table-success table-striped mb-100" id="table">
-        <thead>
-          <tr>
-            <th scope="col">Order date</th>
-            <th scope="col">Payment method</th>
-            <th scope="col">Payment status</th>
-            <th scope="col">Order status</th>
-            <th scope="col">Amount</th>
-            <th scope="col">Delivery date</th>
-            <th scope="col">Controlls</th>
-
-
-          </tr>
-        </thead>
-        <tbody>
-          <% orderDetails.forEach((order)=>{ %>
-            <tr>
-              <td>
-                <%= order.orderDate %>
-              </td>
-              <td>
-                <%= order.paymentMethod %>
-              </td>
-              <td>
-                <%= order.paymentStatus %>
-              </td>
-              <td>
-                <%= order.orderStatus %>
-              </td>
-              <td>
-                <%= order.totalAmount %> ₹
-              </td>
-              <td>
-                <%= order.deliveryDate %>
-              </td>
-              <td>
-
-                <!-- Button trigger modal -->
-                <% if(order.orderStatus=='placed' || order.orderStatus=='pending' || order.orderStatus=='Shipped'||order.orderStatus=='outForDelivery' ){ %>
-                  <button type="button" class="btn btn-danger" data-bs-toggle="modal"
-                    data-bs-target="#exampleModal-<%=order._id%>">
-                    Cancel
-                  </button>
-
-                  <% } %>
-                    <!-- Modal -->
-                    <div class="modal fade  modal-centered" id="exampleModal-<%=order._id%>" tabindex="-1"
-                      aria-labelledby="exampleModalLabel">
-                      <div class="modal-dialog modal-dialog-centered">
-                        <div class="modal-content">
-                          <div class="modal-header">
-                            <h1 class="modal-title fs-5" id="exampleModalLabel">Delete confirmation</h1>
-                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                          </div>
-                          <div class="modal-body">
-                            Are you sure you want to cancel this order ?
-                          </div>
-                          <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                            <a href="/cancelOrder/<%=order._id%>"><button type="button"
-                                class="btn btn-danger">Cancel</button></a>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                    <a href="/orderedProduct/<%= order._id %>" class="btn btn-secondary">View</a>
-
-
-              </td>
-            </tr>
-            <% }) %>
-
-
-
-        </tbody>
-      </table>
-
-    </div>
-    <% } else { %>
-      <h1>empty</h1>
-    <% } %>
-  </div>
-  </div>
+  </section>
+  <% } else { %>
+  
+      <div class="u-unfold u-unfold--cart text-center border rounded-0 right-0 p-5 m-5" >
+        <span style="width:300px;height:300px" class="u-icon u-icon--primary u-icon--md rounded-circle mb-3">
+          <span  class="fa-brands fa-10x fa-shopify"></span>
+        </span>
+        <h2 class="d-block m-3">No Orders Yet</h2>
+        <a href="/shop" class="btn btn-primary">Shop Now</a>
+      </div>
+   
+   
+    <% }  %>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
     crossorigin="anonymous"></script>
@@ -202,7 +231,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
     integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
     crossorigin="anonymous"></script>
-  </div>
+  
 
   <!-- end middle section -->
   <!-- footer -->
