done ejs updation

--- a/views/user/productView.ejs
+++ b/views/user/productView.ejs
@@ -14,7 +14,7 @@
 
       <div class="row">
         <div class="col-md-6">
-          <img src="/adminimages/<%=product._id%>.jpg" alt="Imageview" style="width:80%;height:85%;" class="img-fluid">
+          <img src="adminImages/<%=product._id%>.jpg" alt="Imageview" style="width:80%;height:85%;" class="img-fluid">
         </div>
 
         <div class="col-md-6">
