--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -62,22 +62,17 @@
     </div>
     <div class="row pt-5 mt-5 text-center">
       <div class="col-md-12">
-        <p>
-          <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-          Copyright &copy;
+        <p> Copyright &copy;
           <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
           <script>document.write(new Date().getFullYear());</script> All rights reserved | made <i class="icon-heart"
             aria-hidden="true"></i> by <a style="text-decoration:none;" href="https://colorlib.com" target="_blank"
             class="text-primary">@muhammadarshad8935@gmail.com</a>
-          <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
         </p>
       </div>
-
     </div>
-
+  </div>
 </footer>
 </div>
-
 <script src="http://localhost:3000/js/jquery-3.3.1.min.js"></script>
 <script src="http://localhost:3000/js/jquery-ui.js"></script>
 <script src="http://localhost:3000/js/popper.min.js"></script>
@@ -90,49 +85,6 @@
 <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-<script>
-  $("#placeOrder").submit((e) => {
-    e.preventDefault();
-    $.ajax({
-      url: '/placeOrder',
-      method: 'post',
-      data: $('#placeOrder').serialize(),
-      success: (response) => {
-        if (response.couponDeleted) {
-          Swal.fire({
-            title: "coupon no longer exist!",
-            icon: "error",
-            confirmButtonText: "continue",
-          }).then(function () {
-            location.reload();
-          });
-        } else if (response.coupon) {
-          Swal.fire({
-            title: "Coupon already used!",
-            icon: "error",
-            confirmButtonText: "continue",
-          }).then(function () {
-            location.reload()
-          });
-        } else if (response.invalid) {
-          Swal.fire({
-            title: "Invalid Coupon",
-            icon: "error",
-            confirmButtonText: "continue",
-          }).then(function () {
-            location.reload();
-          });
-        } else if (response.success) {
-          location.href = "/orderSuccess"
-        } else if (response.url) {
-          window.location = response.url
-        } else {
-          location.href = "/viewCart";
-        }
-      }
-    })
-  }) 
-</script>
 </body>
 
 </html>
