--- a/views/user/orderDetails.ejs
+++ b/views/user/orderDetails.ejs
@@ -129,7 +129,7 @@ background: linear-gradient(to top left, rgba(205, 156, 242, 1), rgba(246, 243, 
                     
                     <div class="col-md-2">
                       
-                      <img src="/adminimages/<%= product.productDetail._id %>.jpg"
+                      <img src="/adminImages/<%= product.productDetail._id %>.jpg"
                         class="img-fluid" alt="Phone">
                         <a href="/orderedProduct/<%= product._id %>" style="text-decoration: #a8729a; "  >Track </a>
                     </div>
