--- a/views/partials/adminHeaderNew.ejs
+++ b/views/partials/adminHeaderNew.ejs
@@ -92,7 +92,7 @@
                   <a class="nav-link text-light" href="/admin/dashboard" >Dashboard</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link text-light" href="/admin/orders" >order</a>
+                  <a class="nav-link text-light" href="/admin/order" >order</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link text-light" href="/admin/coupon" >Coupon</a>
